--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,8 +27,10 @@ book:
       chapters:
         - src/ch03-optimization/01-convex-optimization.qmd
 
-filters:
-  - shared-thm-counter
+    - part: src/ch04-quarto-showcase/index.qmd
+      chapters:
+        - src/ch04-quarto-showcase/01-features.qmd
+        - src/ch04-quarto-showcase/02-interactive.qmd
 
 format:
   html:
@@ -41,32 +43,103 @@ format:
     include-after-body:
       text: |
         <script>
-        // Add PDF download link to right TOC sidebar (skip index pages)
         document.addEventListener('DOMContentLoaded', function() {
+          // ==========================================
+          // 1. Add PDF download link to right TOC sidebar
+          // ==========================================
           var path = window.location.pathname;
           
-          // Skip index pages - they don't have individual PDFs
-          if (path.endsWith('/') || path.endsWith('/index.html') || path === '/index.html') {
-            return;
+          if (!path.endsWith('/') && !path.endsWith('/index.html') && path !== '/index.html') {
+            var pdfPath = path.replace(/\.html$/, '.pdf');
+            var section = document.createElement('div');
+            section.style.cssText = 'margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #dee2e6;';
+            section.innerHTML = 
+              '<h6 style="font-size:0.875rem;font-weight:600;margin-bottom:0.5rem;">Other Formats</h6>' +
+              '<a href="' + pdfPath + '" style="display:flex;align-items:center;gap:0.5rem;color:inherit;text-decoration:none;font-size:0.875rem;">' +
+              '<i class="bi bi-file-pdf" style="color:#dc3545;"></i> PDF</a>';
+            
+            var tocSidebar = document.querySelector('#quarto-margin-sidebar') ||
+                             document.querySelector('.toc-active') ||
+                             document.querySelector('#TOC');
+            if (tocSidebar) {
+              tocSidebar.appendChild(section);
+            }
           }
           
-          var pdfPath = path.replace(/\.html$/, '.pdf');
+          // ==========================================
+          // 2. Shared theorem counter (Theorem, Lemma, Corollary, Proposition)
+          // ==========================================
+          var sharedCounter = 0;
+          var definitionCounter = 0;
+          var algorithmCounter = 0;
+          var currentChapter = 0;
           
-          // Create "Other Formats" section for right sidebar
-          var section = document.createElement('div');
-          section.style.cssText = 'margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #dee2e6;';
-          section.innerHTML = 
-            '<h6 style="font-size:0.875rem;font-weight:600;margin-bottom:0.5rem;">Other Formats</h6>' +
-            '<a href="' + pdfPath + '" style="display:flex;align-items:center;gap:0.5rem;color:inherit;text-decoration:none;font-size:0.875rem;">' +
-            '<i class="bi bi-file-pdf" style="color:#dc3545;"></i> PDF</a>';
+          // Types that share a counter
+          var sharedTypes = ['theorem', 'lemma', 'corollary', 'proposition'];
+          // Types with no counter (remove number)
+          var noCounterTypes = ['conjecture', 'example', 'exercise', 'solution', 'remark'];
           
-          // Find the right TOC sidebar
-          var tocSidebar = document.querySelector('#quarto-margin-sidebar') ||
-                           document.querySelector('.toc-active') ||
-                           document.querySelector('#TOC');
-          if (tocSidebar) {
-            tocSidebar.appendChild(section);
-          }
+          // Process all theorem divs in document order
+          document.querySelectorAll('div.theorem').forEach(function(div) {
+            var titleSpan = div.querySelector('.theorem-title strong');
+            if (!titleSpan) return;
+            
+            var text = titleSpan.textContent;
+            var match = text.match(/^(\w+)\s+(\d+)\.(\d+)(.*)$/);
+            if (!match) return;
+            
+            var typeName = match[1].toLowerCase();
+            var chapterNum = parseInt(match[2]);
+            var rest = match[4];
+            
+            // Reset counters on chapter change
+            if (chapterNum !== currentChapter) {
+              currentChapter = chapterNum;
+              sharedCounter = 0;
+              definitionCounter = 0;
+              algorithmCounter = 0;
+            }
+            
+            // Determine the specific type from classes
+            var classes = Array.from(div.classList);
+            var specificType = null;
+            
+            for (var i = 0; i < classes.length; i++) {
+              var cls = classes[i];
+              if (cls !== 'theorem' && (sharedTypes.indexOf(cls) >= 0 || cls === 'definition' || cls === 'algorithm' || noCounterTypes.indexOf(cls) >= 0)) {
+                specificType = cls;
+                break;
+              }
+            }
+            
+            // If no specific type found, it's a pure theorem
+            if (!specificType && classes.indexOf('theorem') >= 0) {
+              specificType = 'theorem';
+            }
+            
+            var newNum = null;
+            
+            if (specificType === 'definition') {
+              definitionCounter++;
+              newNum = currentChapter + '.' + definitionCounter;
+            } else if (specificType === 'algorithm') {
+              algorithmCounter++;
+              newNum = currentChapter + '.' + algorithmCounter;
+            } else if (sharedTypes.indexOf(specificType) >= 0) {
+              sharedCounter++;
+              newNum = currentChapter + '.' + sharedCounter;
+            } else if (noCounterTypes.indexOf(specificType) >= 0) {
+              // Remove number
+              var capitalType = specificType.charAt(0).toUpperCase() + specificType.slice(1);
+              titleSpan.textContent = capitalType + rest;
+              return;
+            }
+            
+            if (newNum) {
+              var capitalType = specificType.charAt(0).toUpperCase() + specificType.slice(1);
+              titleSpan.textContent = capitalType + ' ' + newNum + rest;
+            }
+          });
         });
         </script>
     
@@ -79,9 +152,13 @@ format:
     urlcolor: "blue"
     pdf-engine: lualatex
     linestretch: 1.1
+    fig-width: 6
+    fig-pos: "H"
     include-in-header:
       - text: |
           \usepackage[quartoenv]{./config/latex-template}
+          % Strip numbers from unnumbered theorem environments
+          \directlua{require("config/strip-numbers")}
           % Remove blank pages
           \usepackage{etoolbox}
           \makeatletter
