--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,12 +36,18 @@ jobs:
         run: |
           pip install jupyter numpy matplotlib pandas scipy
 
-      - name: Render HTML and full book PDF
-        timeout-minutes: 20
-        run: quarto render
+      - name: Render HTML only
+        timeout-minutes: 10
+        run: quarto render --to html
+
+      - name: Render PDF book
+        timeout-minutes: 15
+        run: quarto render --to pdf
+        continue-on-error: true
 
       - name: Build individual chapter PDFs
         timeout-minutes: 15
+        continue-on-error: true
         run: |
           TMPDIR=$(mktemp -d)
           
@@ -61,7 +67,7 @@ jobs:
               basename=$(basename "$qmd" .qmd)
               
               echo "Rendering: $qmd"
-              (cd "$TMPDIR/$output_dir" && quarto render "$basename.qmd" --to pdf --metadata standalone-pdf:true) || true
+              timeout 120 sh -c "cd \"$TMPDIR/$output_dir\" && quarto render \"$basename.qmd\" --to pdf --metadata standalone-pdf:true" || echo "Timeout or error for $qmd"
               
               [ -f "$TMPDIR/$output_dir/$basename.pdf" ] && \
                 mv "$TMPDIR/$output_dir/$basename.pdf" "_book/$output_dir/$basename.pdf"
