--- a/_quarto.yml
+++ b/_quarto.yml
@@ -181,6 +181,6 @@ format:
           \newlist{customenum}{enumerate}{1}
           \setlist[customenum,1]{label=\customenumprefix\arabic*, itemsep=1.2em}
           \newcommand{\customenumprefix}{}
-          \input{config/chapter-style.tex}
+          \usepackage{./config/chapter-style}
     geometry:
       - margin=1.2in
