--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,35 +48,39 @@ jobs:
         timeout-minutes: 15
         continue-on-error: true
         run: |
-          # Create temp directory for individual PDFs (won't be cleaned by quarto)
+          # Create temp directory for individual PDFs
           PDFDIR=$(mktemp -d)
           echo "Temp PDF dir: $PDFDIR"
           
-          # Render each chapter
+          # Render each chapter to temp directory (avoids cleaning _book)
           for qmd in src/ch*-*/[0-9][0-9]-*.qmd; do
             if [ -f "$qmd" ]; then
               output_dir=$(dirname "$qmd")
               basename=$(basename "$qmd" .qmd)
               
               echo "=== Rendering: $qmd ==="
+              mkdir -p "$PDFDIR/$output_dir"
               
-              # Render (outputs to _book/ which may get cleaned)
+              # Render to temp dir using --output-dir to avoid cleaning _book
               quarto render "$qmd" --to pdf --output "$basename.pdf" \
+                --output-dir "$PDFDIR/$output_dir" \
                 --metadata standalone-pdf:true 2>&1 || echo "Warning: Failed to render $qmd"
               
-              # Find and copy to temp dir with path info
-              pdf_path=$(find . -name "$basename.pdf" -type f 2>/dev/null | head -1)
-              if [ -n "$pdf_path" ]; then
-                mkdir -p "$PDFDIR/$output_dir"
-                cp "$pdf_path" "$PDFDIR/$output_dir/$basename.pdf"
-                echo "  -> Saved to $PDFDIR/$output_dir/$basename.pdf"
+              if [ -f "$PDFDIR/$output_dir/$basename.pdf" ]; then
+                echo "  -> Created $PDFDIR/$output_dir/$basename.pdf"
               fi
             fi
           done
           
-          # Copy all PDFs to _book after all renders complete
+          # Copy all PDFs to _book
           echo "=== Copying PDFs to _book ==="
-          cp -r "$PDFDIR"/src/* _book/src/ 2>/dev/null || true
+          for dir in "$PDFDIR"/src/ch*-*/; do
+            if [ -d "$dir" ]; then
+              dest_dir="_book/$(echo "$dir" | sed "s|$PDFDIR/||")"
+              mkdir -p "$dest_dir"
+              cp "$dir"*.pdf "$dest_dir" 2>/dev/null || true
+            fi
+          done
           
           # Cleanup
           rm -rf "$PDFDIR"
