--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,6 +72,9 @@ jobs:
               # Copy _extensions to chapter dir (where quarto looks for them)
               cp -r _extensions "$BUILDDIR/$output_dir/" 2>/dev/null || true
               
+              # Copy _mermaid-cache to chapter dir (for mermaid-static filter)
+              cp -r _mermaid-cache "$BUILDDIR/$output_dir/" 2>/dev/null || true
+              
               # Copy chapter resources
               cp -r "$output_dir/images" "$BUILDDIR/$output_dir/" 2>/dev/null || true
               cp -r "$output_dir"/*_files "$BUILDDIR/$output_dir/" 2>/dev/null || true
