--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,11 +75,10 @@ jobs:
               # Copy _mermaid-cache to chapter dir (for mermaid-static filter)
               cp -r _mermaid-cache "$BUILDDIR/$output_dir/" 2>/dev/null || true
               
-              # Create minimal _quarto.yml with mermaid-static filter
-              cat > "$BUILDDIR/$output_dir/_quarto.yml" << 'YAML'
-filters:
-  - mermaid-static
-YAML
+              # Create minimal _quarto.yml with just the mermaid filter
+              # PDF styling comes from each qmd file's front matter
+              echo 'filters:' > "$BUILDDIR/$output_dir/_quarto.yml"
+              echo '  - mermaid-static' >> "$BUILDDIR/$output_dir/_quarto.yml"
               
               # Copy chapter resources
               cp -r "$output_dir/images" "$BUILDDIR/$output_dir/" 2>/dev/null || true
